point info amélioré, texte visible et lien correct

--- a/assets/css/parcours.css
+++ b/assets/css/parcours.css
@@ -6,6 +6,10 @@ body {
     background-image: url(../img/parcours.jpg);
     background-attachment: fixed;
 }
+.note, .note a {
+    color: black;
+    font-size: 15px !important;
+} 
 .timeline{
     margin-top:20px;
     position:relative;
